people index: fix overflowing bios
From playing with the dev console's responsive mode, it seems that 270px
is the better magic number.

--- a/static/style.css
+++ b/static/style.css
@@ -254,7 +254,7 @@ a.underline, span.underline {
 
 #people-page-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
     grid-auto-rows: 135px;
     grid-auto-flow: dense;
     gap: 10px;
@@ -284,20 +284,19 @@ a.underline, span.underline {
     justify-self: stretch;
     background-color: #f3f3f3;
     max-height: 135px;
-    min-width: 240px;
+    min-width: 270px;
     overflow: auto;
     transition: transform 0.3s;
 }
 
 .person-tile .person-name {
     margin-top: 10px;
-    font-size: 0.7em;
+    font-size: 0.8em;
 }
 
 .person-tile .shortbio {
-    margin-top: 10px;
     align-items: baseline;
-    font-size: 0.7em;
+    font-size: 0.8em;
     font-family: Aleo, serif;
     font-weight: 400;
     padding: 5px;
